// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Packages | Card Default Full Button type 1`] = `
.c4 {
  display: inline-block;
  vertical-align: middle;
  padding: 0.25rem 0.75rem;
  border-radius: 0.75rem;
  font-size: 0.725rem;
  background-color: #00C3FF;
  color: #ffffff;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  width: 60px;
  text-align: right;
}

.c5 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c6 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c7 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c7:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c9 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c9:hover {
  background-color: #D8E3F6;
}

.c8 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #456297;
}

.c8:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="vital__card-header c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
    <div
      className="c3 c2"
    >
      <span
        className="vital__badge vital__card-header-badge c4"
      >
        99+
      </span>
    </div>
  </div>
  <div
    className="vital__card-content c5"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c6"
  >
    <div
      className="vital__card-footer-button-wapper c7"
    >
      <button
        className="vital__card-footer-button c8"
      >
        Cancel
      </button>
    </div>
    <div
      className="vital__card-footer-button-wapper c7"
    >
      <button
        className="vital__card-footer-button c9"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card With Flat Button 1`] = `
.c6 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background: #D8E3F6;
}

.c6:active {
  background: #C4D2EB;
}

.c6[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  position: relative;
  background: #F7F9FE;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #0E86FE;
  color: #ffffff;
  border-color: #0E86FE;
}

.c7:hover {
  background: #D8E3F6;
}

.c7:active {
  background: #C4D2EB;
}

.c7:hover {
  background: #41a0fe;
  border-color: #41a0fe;
}

.c7:active {
  background: #0167ce;
  border-color: #0167ce;
}

.c7[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 > button:not(:last-child) {
  margin-right: 5px;
}

.c5 > button {
  display: inline-block;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c4 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="vital__card-header c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c3"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c4"
  >
    <div
      className="c5"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <button
        className="vital__button c6"
        disabled={false}
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Cancel
      </button>
      <button
        className="vital__button c7"
        disabled={false}
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card With Icon 1`] = `
.c1 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c2 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c3 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c3:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c4 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c4:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: auto;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="auto"
  width="300px"
>
  <div
    className="vital__card-content c1"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <svg
      color="#0e86fe"
      fontSize="90"
      height="1em"
      name="thumbs-up"
      viewBox="0 0 739.21 1024"
      width="1em"
    >
      <defs />
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          id="icon"
        >
          <path
            className="cls-1"
            d="M561.62 960h-384a32 32 0 1 0 0 64h384a32 32 0 0 0 0-64zM181.53 831.76a32 32 0 0 0 27.85-35.67C191.27 648.92 177.62 458 177.62 352c0-38.2 10.36-76.93 30.79-115.11 16.92-31.62 40.73-63 70.76-93.18a590.16 590.16 0 0 1 90.46-73.93c48.6 32.14 192 139.11 192 282.22 0 106-13.65 296.92-31.76 444.09a32 32 0 0 0 27.85 35.67 33.09 33.09 0 0 0 3.95.24 32 32 0 0 0 31.72-28.09c18.38-149.4 32.24-343.68 32.24-451.91 0-49.15-13.06-98.33-38.83-146.17-20-37.25-47.83-73.74-82.54-108.46C445.89 39 387.93 5.61 385.5 4.22a32 32 0 0 0-31.76 0C351.3 5.61 293.35 39 235 97.37c-34.72 34.72-62.49 71.21-82.55 108.46-25.76 47.84-38.82 97-38.82 146.17 0 108.23 13.86 302.51 32.24 451.91a32 32 0 0 0 35.66 27.85z"
          />
          <path
            className="cls-1"
            d="M726.31 784.19l-36.82-64.13A32 32 0 0 0 634 751.94l36.82 64.12A32 32 0 0 1 643.06 864H96.15a32 32 0 0 1-27.75-47.93l36.81-64.14a32 32 0 1 0-55.5-31.86l-36.82 64.14A96 96 0 0 0 96.15 928h546.91a96 96 0 0 0 83.25-143.81zM419.46 298.08a128.21 128.21 0 1 0 40.67 27.41 127.27 127.27 0 0 0-40.67-27.41zM369.62 480a64 64 0 1 1 64-64 64 64 0 0 1-64 64z"
          />
        </g>
      </g>
    </svg>
    <div
      style={
        Object {
          "color": "#456297",
          "fontSize": "1.25rem",
          "lineHeight": "1.5rem",
          "overflow": "hidden",
          "paddingTop": "1.25rem",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
          "width": "100%",
        }
      }
    >
      Congrats
    </div>
    <div
      style={
        Object {
          "fontSize": "0.93333rem",
          "lineHeight": "1.25rem",
          "paddingTop": "10px",
        }
      }
    >
      Let’s Get Started
    </div>
  </div>
  <div
    className="vital__card-footer c2"
  >
    <div
      className="vital__card-footer-button-wapper c3"
    >
      <button
        className="vital__card-footer-button c4"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card With Link Button 1`] = `
.c6 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c6:hover {
  background: #D8E3F6;
}

.c6:active {
  background: #C4D2EB;
}

.c6:hover {
  background: transparent;
  color: #41a0fe;
}

.c6[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  position: relative;
  background: #F7F9FE;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c7:hover {
  background: #D8E3F6;
}

.c7:active {
  background: #C4D2EB;
}

.c7:hover {
  background: transparent;
  color: #41a0fe;
}

.c7[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 > button:not(:last-child) {
  margin-right: 5px;
}

.c5 > button {
  display: inline-block;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c4 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="vital__card-header c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c3"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c4"
  >
    <div
      className="c5"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <button
        className="vital__button c6"
        disabled={false}
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Cancel
      </button>
      <button
        className="vital__button c7"
        disabled={false}
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;
